# cpp2024-Game

./: .gitignore  CMakeLists.txt  Collision.cpp  Components.h  ECS.h  Makefile  Map.cpp  Map.h  Menu.cpp  Menu.h  README.md  TODO.md  Vector2D.cpp  Vector2D.h  game_loop.cpp  game_loop.h  game_loop.hpp  game_object.cpp  game_object.h  item.cpp  item.h  item.hpp  main.cpp  player.cpp  player.h  player.hpp  savaitines_uzduotys.md  texture_manager.cpp  texture_manager.h
Algio Nuotykiai/: Collision.h  Doxyfile  GameLoop.cpp  GameObject.cpp  GameObject.h  Makefile  Map.cpp  Map.h  Menu.h  README.md  TextureManager.cpp  TextureManager.h  Vector2D.h  game_loop.cpp  game_loop.h  game_object.h  howToCMake.md  item.h  main.cpp  player.cpp  player.h
Algio Nuotykiai/ECS/: Animation.h  ColliderComponent.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
Algio Nuotykiai/ResourceManagement/: AssetManager.cpp  BaseResource.h  TextureResource.cpp  TextureResource.h
Algio Nuotykiai/assets/Animacijos/Files/: Branch.aseprite
Algio Nuotykiai/html/: _collision_8cpp.html  _collision_8cpp__incl.dot  _collision_8h.html  _collision_8h__dep__incl.dot  _collision_8h__incl.dot  _collision_8h_source.html  _map_8cpp.html  _map_8cpp__incl.dot  _map_8h.html  _map_8h__dep__incl.dot  _map_8h__incl.dot  _map_8h_source.html  _menu_8cpp.html  _menu_8cpp__incl.dot  _menu_8h.html  _menu_8h__dep__incl.dot  _menu_8h__incl.dot  _menu_8h_source.html  _r_e_a_d_m_e_8md.html  _vector2_d_8cpp.html  _vector2_d_8cpp__incl.dot  _vector2_d_8h.html  _vector2_d_8h__dep__incl.dot  _vector2_d_8h__incl.dot  _vector2_d_8h_source.html  annotated.html  class_collision-members.html  class_collision.html  class_collision_a1ec0c7adbc40fbc17cd335f85403b395_cgraph.dot  class_collision_a4c1f3d2b5230ffb04894207b4b8cebcd_icgraph.dot  class_map-members.html  class_map.html  class_map_aa6d6edde66fe2b1005f96661c9dd807c_icgraph.dot  class_map_ae629159100626b3a3d077c0c54edfba5_cgraph.dot  class_map_ae629159100626b3a3d077c0c54edfba5_icgraph.dot  class_map_afe1a00d99e88dca6172a0c8356efb677_icgraph.dot  class_menu-members.html  class_menu.html  class_menu_a9ae5481ad0f6bea5e957cb6c14464766_cgraph.dot  class_player-members.html  (+114 more)
Algio Nuotykiai/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+31 more)
Algio Nuotykiai/latex/: _collision_8cpp.tex  _collision_8cpp.tex.tmp  _collision_8cpp__incl.dot  _collision_8h.tex  _collision_8h__dep__incl.dot  _collision_8h__incl.dot  _collision_8h_source.tex  _map_8cpp.tex  _map_8cpp__incl.dot  _map_8h.tex  _map_8h__dep__incl.dot  _map_8h__incl.dot  _map_8h_source.tex  _menu_8cpp.tex  _menu_8cpp__incl.dot  _menu_8h.tex  _menu_8h__dep__incl.dot  _menu_8h__incl.dot  _menu_8h_source.tex  _vector2_d_8cpp.tex  _vector2_d_8cpp__incl.dot  _vector2_d_8h.tex  _vector2_d_8h__dep__incl.dot  _vector2_d_8h__incl.dot  _vector2_d_8h_source.tex  annotated.tex  class_collision.tex  class_collision_a1ec0c7adbc40fbc17cd335f85403b395_cgraph.dot  class_collision_a4c1f3d2b5230ffb04894207b4b8cebcd_icgraph.dot  class_map.tex  class_map_aa6d6edde66fe2b1005f96661c9dd807c_icgraph.dot  class_map_ae629159100626b3a3d077c0c54edfba5_cgraph.dot  class_map_ae629159100626b3a3d077c0c54edfba5_icgraph.dot  class_map_afe1a00d99e88dca6172a0c8356efb677_icgraph.dot  class_menu.tex  class_menu_a9ae5481ad0f6bea5e957cb6c14464766_cgraph.dot  class_player.tex  class_player__coll__graph.dot  class_player__inherit__graph.dot  class_player_a414f809d992d15c94df623d8b6ecd290_cgraph.dot  (+80 more)
ECS/: ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
ResourceManagement/: AssetManager.cpp  AssetManager.h  BaseResource.h
assets/Animacijos/Files/: Player.aseprite  Rat.aseprite
assets/Map/: TEMPp16x16.map  map.map  map2.map  map_new.map.txt  p16x16.map  pyxel16x16.map
cmake_modules/: FindSDL2.cmake
